ok customer_segmentation / debut finding_donors

--- a/projects/customer_segments/customer_segments.ipynb
+++ b/projects/customer_segments/customer_segments.ipynb
@@ -348,11 +348,26 @@
     "**Answer:**\n",
     "\n",
     "- ID 0 : \n",
-    "    - \n",
+    "    - Fresh : presque 2 fois inférieur à la \"mean value\"\n",
+    "    - Milk : 3000points de plus que la \"mean value\"\n",
+    "    - Grocery : valeur légèrement inférieur à la \"mean value\"\n",
+    "    - Frozen : valeur \"mean value\" inconnue\n",
+    "    - Detergents_Paper : 635 points de plus que la \"mean value\"\n",
+    "    - Delicatessen : plus de 5 fois supérieur à la \"mean value\"\n",
     "- ID 1 :\n",
-    "    - \n",
+    "    - Fresh : 1.3 fois plus que la \"mean value\"\n",
+    "    - Milk : 800 points de moins que la \"mean value\"\n",
+    "    - Grocery : presque 1.2 fois que la \"mean value\"\n",
+    "    - Frozen : valeur \"mean value\" inconnue\n",
+    "    - Detergents_Paper : 1.15 fois plus que la \"mean value\"\n",
+    "    - Delicatessen : 300 points de moins que la \"mean value\"\n",
     "- ID 2 :\n",
-    "    -"
+    "    - Fresh : 2.9 fois moins que la \"mean value\"\n",
+    "    - Milk : 3.5 fois plus que la \"mean value\"\n",
+    "    - Grocery : 3.26 fois plus que la \"mean value\"\n",
+    "    - Frozen : valeur \"mean value\" inconnue\n",
+    "    - Detergents_Paper : 2.986 fois plus que la \"mean value\"\n",
+    "    - Delicatessen : 3.4 fois plus que la \"mean value\""
    ]
   },
   {
@@ -2282,7 +2297,8 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "\n"
+    "\n",
+    "La \"target variable\" pourrait être le groupe cluster."
    ]
   },
   {
@@ -2336,9 +2352,8 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "- \n",
-    "- Le client 2 peut être considéré comme purement \"Retailer\" puisqu'il est suffisement éloigné de tous points de la catégorie \"Hotel/Restaurant/Cafe\"\n",
-    "- "
+    "- L'algorithme prévoit des résultats similaires à ceux vue plus haut.\n",
+    "- Le client 2 peut être considéré comme purement \"Retailer\" puisqu'il est suffisement éloigné de tous points de la catégorie \"Hotel/Restaurant/Cafe\"."
    ]
   },
   {
